GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Abandoned__c.field-meta.xml
<CustomField>
    <fullName>Abandoned__c</fullName>
    <formula>AND(Application_Abandonment_Date__c &lt;= TODAY(),ISBLANK(Contract_DD_Received__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abandoned</label>
    <type>Checkbox</type>
</CustomField>