GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Aged_Debt_Since__c.field-meta.xml
<CustomField>
    <fullName>Aged_Debt_Since__c</fullName>
    <label>Aged Debt Since</label>
    <type>Date</type>
</CustomField>