GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Aged_Debtors__c.field-meta.xml
<CustomField>
    <fullName>Aged_Debtors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aged Debtors</label>
    <type>Checkbox</type>
</CustomField>