GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Amount_Sterling__c.field-meta.xml
<CustomField>
    <fullName>Amount_Sterling__c</fullName>
    <label>Amount Sterling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>