GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/API_Status__c.field-meta.xml
<CustomField>
    <fullName>API_Status__c</fullName>
    <label>API Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API Testing</fullName>
            </value>
            <value>
                <fullName>API Active</fullName>
            </value>
            <value>
                <fullName>API Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>