GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Application_Abandonment_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Abandonment_Date__c</fullName>
    <formula>Application_Sent__c + 42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Abandonment Date</label>
    <type>Date</type>
</CustomField>