GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Authorise_Tkg_Auth_and_add_IATA__c.field-meta.xml
<CustomField>
    <fullName>Authorise_Tkg_Auth_and_add_IATA__c</fullName>
    <label>Authorise Tkg Auth and add IATA</label>
    <type>Date</type>
</CustomField>