GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Bond_Requested__c.field-meta.xml
<CustomField>
    <fullName>Bond_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bond Requested</label>
    <type>Checkbox</type>
</CustomField>