GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Bond_Returned__c.field-meta.xml
<CustomField>
    <fullName>Bond_Returned__c</fullName>
    <label>Bond Returned</label>
    <type>Date</type>
</CustomField>