GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Bond_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Bond_Supplied__c</fullName>
    <label>Bond Supplied</label>
    <type>Date</type>
</CustomField>