GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Concessions_Approved_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Approved_Y_N__c</fullName>
    <formula>Trading_Account__r.Concession__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concessions Approved Y/N</label>
    <type>Checkbox</type>
</CustomField>