GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Concessions_Due_Date_Is_In_Future__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Due_Date_Is_In_Future__c</fullName>
    <formula>Concessions_Review_Due__c &gt; TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concessions Due Date Is In Future</label>
    <type>Checkbox</type>
</CustomField>