GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Concessions_Review_Due__c.field-meta.xml
<CustomField>
    <fullName>Concessions_Review_Due__c</fullName>
    <label>Concessions Review Due</label>
    <type>Date</type>
</CustomField>