GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Contract_Chase_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_Chase_Sent__c</fullName>
    <label>Contract Chase Sent</label>
    <type>Date</type>
</CustomField>