GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Contract_DD_Sent__c.field-meta.xml
<CustomField>
    <fullName>Contract_DD_Sent__c</fullName>
    <label>Contract Sent</label>
    <type>Date</type>
</CustomField>