GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Contract_Start__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start__c</fullName>
    <label>Contract Start</label>
    <type>Date</type>
</CustomField>