GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Contract_Status_n__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status_n__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <inlineHelpText>Contract lifecycle</inlineHelpText>
    <label>Contract Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Contract Sent</fullName>
            </value>
            <value>
                <fullName>Contract Chase</fullName>
            </value>
            <value>
                <fullName>Contract Received</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>