GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score__c</fullName>
    <label>Credit Score</label>
    <type>TextArea</type>
</CustomField>