GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Direct_Debit_Sent__c.field-meta.xml
<CustomField>
    <fullName>Direct_Debit_Sent__c</fullName>
    <label>Direct Debit Sent</label>
    <type>Date</type>
</CustomField>