GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Letter_of_Credit_Approved__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Credit_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Letter of Credit Approved?</label>
    <type>Checkbox</type>
</CustomField>