GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Letter_of_Credit_Sent__c.field-meta.xml
<CustomField>
    <fullName>Letter_of_Credit_Sent__c</fullName>
    <label>Letter of Credit Sent</label>
    <type>Date</type>
</CustomField>