GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Mapping_Request_sent__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Request_sent__c</fullName>
    <label>Mapping Request sent</label>
    <type>Date</type>
</CustomField>