GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/NDA_received__c.field-meta.xml
<CustomField>
    <fullName>NDA_received__c</fullName>
    <label>NDA received</label>
    <type>Date</type>
</CustomField>