GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Notes_Comments__c.field-meta.xml
<CustomField>
    <fullName>Notes_Comments__c</fullName>
    <label>Notes/Comments</label>
    <type>TextArea</type>
</CustomField>