GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Outstanding_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Invoices__c</fullName>
    <label>Outstanding Invoices</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>