GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Set_up_in_R12_Add_Oracle_Id_Above__c.field-meta.xml
<CustomField>
    <fullName>Set_up_in_R12_Add_Oracle_Id_Above__c</fullName>
    <label>Oracle ID Set up</label>
    <type>Date</type>
</CustomField>