GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <defaultValue>&quot;New Contract&quot;</defaultValue>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Contract</fullName>
            </value>
            <value>
                <fullName>Re-contracting</fullName>
            </value>
            <value>
                <fullName>Account Closure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>