GearsetPOC/force-app/main/default/objects/Application_Audit__c/fields/Voyager_Application_Sent__c.field-meta.xml
<CustomField>
    <fullName>Voyager_Application_Sent__c</fullName>
    <label>Voyager Application Sent</label>
    <type>Date</type>
</CustomField>