GearsetPOC/force-app/main/default/objects/Application_Audit__c/recordTypes/Application_Audit.recordType-meta.xml
<RecordType>
    <fullName>Application_Audit</fullName>
    <active>false</active>
    <label>Application Audit</label>
</RecordType>